log
Wed, Mar 19, 2025  8:44:58 AM: 
 exercises.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L , dato);
       ^~~~~~~~~
exercises.c: In function 'sumaLista':
exercises.c:62:5: error: 'elemento' undeclared (first use in this function)
    *elemento = first(L);
     ^~~~~~~~
exercises.c:62:5: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function 'eliminaElementos':
exercises.c:81:5: error: 'dato' undeclared (first use in this function)
    *dato = first(L);
     ^~~~
exercises.c:83:24: error: implicit declaration of function 'popcurrent' [-Werror=implicit-function-declaration]
       if(elem == dato) popcurrent(dato);
                        ^~~~~~~~~~
exercises.c: In function 'copia_pila':
exercises.c:97:1: error: expected '(' before '}' token
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
3f6cb15
Wed, Mar 19, 2025  8:46:40 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L , dato);
       ^~~~~~~~~
exercises.c: In function 'sumaLista':
exercises.c:62:5: error: 'elemento' undeclared (first use in this function)
    *elemento = first(L);
     ^~~~~~~~
exercises.c:62:5: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function 'eliminaElementos':
exercises.c:81:5: error: 'dato' undeclared (first use in this function)
    *dato = first(L);
     ^~~~
exercises.c:83:24: error: implicit declaration of function 'popcurrent' [-Werror=implicit-function-declaration]
       if(elem == dato) popcurrent(dato);
                        ^~~~~~~~~~
exercises.c: In function 'copia_pila':
exercises.c:97:1: error: expected '(' before '}' token
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
a9e965e
Wed, Mar 19, 2025  8:48:05 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L , dato);
       ^~~~~~~~~
exercises.c: In function 'sumaLista':
exercises.c:62:5: error: 'elemento' undeclared (first use in this function)
    *elemento = first(L);
     ^~~~~~~~
exercises.c:62:5: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function 'eliminaElementos':
exercises.c:81:5: error: 'dato' undeclared (first use in this function)
    *dato = first(L);
     ^~~~
exercises.c:83:24: error: implicit declaration of function 'popcurrent' [-Werror=implicit-function-declaration]
       if(elem == dato) popcurrent(dato);
                        ^~~~~~~~~~
exercises.c: In function 'copia_pila':
exercises.c:97:1: error: expected '(' before '}' token
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
587d05d
Wed, Mar 19, 2025  8:51:40 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'pushfront' [-Werror=implicit-function-declaration]
       pushfront(L , dato);
       ^~~~~~~~~
exercises.c: In function 'sumaLista':
exercises.c:62:5: error: 'elemento' undeclared (first use in this function)
    *elemento = first(L);
     ^~~~~~~~
exercises.c:62:5: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function 'eliminaElementos':
exercises.c:81:5: error: 'dato' undeclared (first use in this function)
    *dato = first(L);
     ^~~~
exercises.c:83:24: error: implicit declaration of function 'popcurrent' [-Werror=implicit-function-declaration]
       if(elem == dato) popcurrent(dato);
                        ^~~~~~~~~~
exercises.c: In function 'copia_pila':
exercises.c:97:1: error: expected '(' before '}' token
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
0519fda
Wed, Mar 19, 2025  8:52:54 AM: 
 exercises.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:83:15: error: comparison between pointer and integer [-Werror]
       if(elem == dato) {
               ^~
exercises.c:84:21: error: passing argument 1 of 'popCurrent' from incompatible pointer type [-Werror=incompatible-pointer-types]
          popCurrent(dato);
                     ^~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:32:7: note: expected 'List * {aka struct List *}' but argument is of type 'int *'
 void *popCurrent(List *L);
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
593ace8
Wed, Mar 19, 2025  8:53:51 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:84:21: error: passing argument 1 of 'popCurrent' from incompatible pointer type [-Werror=incompatible-pointer-types]
          popCurrent(dato);
                     ^~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:32:7: note: expected 'List * {aka struct List *}' but argument is of type 'int *'
 void *popCurrent(List *L);
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0c2b04f
Wed, Mar 19, 2025  8:54:30 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:84:21: error: passing argument 1 of 'popCurrent' makes pointer from integer without a cast [-Werror=int-conversion]
          popCurrent(*dato);
                     ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:32:7: note: expected 'List * {aka struct List *}' but argument is of type 'int'
 void *popCurrent(List *L);
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
48905ab
Wed, Mar 19, 2025  8:55:04 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|0
   [info] Lista: [0 2 3 2 2 1 1 1 4 1 4 4 2 4 1 3 1 3 2 1 3 3 3 2 4 0 0 2 2 4 ]
f96e7e7
Wed, Mar 19, 2025  9:15:29 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
89d505b
Wed, Mar 19, 2025  9:35:30 AM: 
 exercises.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  3|2
total_score: 40/70
3599b56
